<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mohsin.smsremotecontroller.Timed_Call_Block">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_timed__call__block"
        android:id="@+id/button3"
        android:onClick="block"
        android:layout_marginTop="56dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Unblock"
        android:id="@+id/button4"
        android:onClick="unblock"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:text="@string/Time"
        android:id="@+id/button17"
        android:onClick="TimePicker"
        android:layout_below="@+id/timePicker3"
        android:layout_marginTop="46dp"
        android:layout_alignRight="@+id/button4"
        android:layout_toRightOf="@+id/textView4" />

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker3"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true" />

</RelativeLayout>
