<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mohsin.smsremotecontroller.Timed_SMS_Block">

    <TextView android:text="@string/Block_time" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Unblock"
        android:id="@+id/button"
        android:onClick="unblock"
        android:layout_below="@+id/button13"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="48dp" />

    <!--<Button-->
        <!--style="?android:attr/buttonStyleSmall"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/title_activity_timed__sms__block"-->
        <!--android:id="@+id/button2"-->
        <!--android:onClick="block"-->
        <!--android:layout_below="@+id/button"-->
        <!--android:layout_toLeftOf="@+id/button14"-->
        <!--android:layout_marginTop="104dp" />-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Block_15_min"
        android:onClick="Fifteen"
        android:id="@+id/button5"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Block_30_min"
        android:id="@+id/button7"
        android:onClick="Thirty"
        android:layout_above="@+id/button14"
        android:layout_alignRight="@+id/button14" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Block_45_min"
        android:id="@+id/button13"
        android:onClick="Fourtyfive"
        android:layout_below="@+id/button5"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Block_Hour"
        android:id="@+id/button14"
        android:onClick="Hour"
        android:layout_below="@+id/button5"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/button15" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Block_until"
        android:id="@+id/button15"
        android:onClick="TimePicker"
        android:layout_above="@+id/timePicker2"
        android:layout_alignParentRight="true" />

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker2"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="65dp" />

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
        <!--android:text="@string/Start_time"-->
        <!--android:id="@+id/textView10"-->
        <!--android:layout_above="@+id/timePicker"-->
        <!--android:layout_alignParentLeft="true" />-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:text="@string/End_time"-->
        <!--android:id="@+id/textView11"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_alignRight="@+id/textView7" />-->

    <!--<TimePicker-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/timePicker2"-->
        <!--android:layout_above="@+id/button"-->
        <!--android:layout_alignParentLeft="true" />-->

    <!--<TimePicker-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/timePicker"-->
        <!--android:layout_above="@+id/textView11"-->
        <!--android:layout_alignParentLeft="true" />-->

</RelativeLayout>
