<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/title_activity_fake_call"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Enter Fake Call Name"
        android:id="@+id/textView5" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"

        android:text="Name"
        android:ems="10"
        android:id="@+id/Fake_call_Name"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"

        android:text="Enter Fake Call Phone no :"
        android:id="@+id/textView6" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/Fake_call_Phone" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Three"
            android:id="@+id/button9"
            android:onClick="Three"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Five"
            android:id="@+id/button10"
            android:onClick="Five"
            android:layout_above="@+id/button12"
            android:layout_alignRight="@+id/button12"
            android:layout_toRightOf="@+id/button8" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ten"
            android:id="@+id/button11"
            android:layout_below="@+id/button9"
            android:onClick="Ten"
            android:layout_alignParentLeft="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Fifteen"
            android:id="@+id/button12"
            android:onClick="Fifteen"
            android:layout_alignTop="@+id/button11"
            android:layout_alignParentRight="true" />

        <Button
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="@string/Time"
            android:id="@+id/button16"
            android:onClick="TimePicker"
            android:layout_alignTop="@+id/button8"
            android:layout_toRightOf="@+id/textView8" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/no"
            android:onClick="Main_Activity"
            android:id="@+id/button6" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timePicker" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>


</LinearLayout>